make cursor visible, fix header and footer

--- a/style-override.css
+++ b/style-override.css
@@ -121,5 +121,5 @@ div .slides {
 }
 
 .slides {
-	cursor: none;
+/*	cursor: none; */
 }
